[metadata]
name = similarity_checker
version = 0.0.1
author = Toh Yew Leong
author_email = yewleongtoh@gmail.com
description = The SimilarityChecker module determines the similarity between two items.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yewleongtoh/similarity_checker
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    transformer>=4.35.2
    scipy>=1.11.4
    altair>=5.3.0
    joblib>=1.2.0
    torch>=2.0.0
include_package_data = True