[metadata]
name = llm_similarity_checker
version = 0.1.1
author = Toh Yew Leong
author_email = yewleongtoh@gmail.com
description = The SimilarityChecker module determines the similarity between two items.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yewleongtoh/similarity_checker
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
install_requires =
    transformers==4.42.3
    scipy==1.14.0
    joblib==1.4.2
    torch==2.3.1
include_package_data = True